// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem component renders correctly 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flexDirection": "row",
          "padding": 10,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Object {
        "backgroundColor": "#BCBBC1",
        "height": 0.5,
      }
    }
  />
</View>
`;

exports[`ListItem component renders correctly with avatar 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flexDirection": "row",
          "padding": 10,
        },
        undefined,
      ]
    }
  >
    <Image
      source={1}
      style={
        Array [
          Object {
            "borderRadius": 25,
            "height": 50,
            "width": 50,
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#BCBBC1",
        "height": 0.5,
      }
    }
  />
</View>
`;

exports[`ListItem component renders correctly with icon 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flexDirection": "row",
          "padding": 10,
        },
        undefined,
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgba(0, 0, 0, 0.40)",
            "fontSize": 24,
          },
          undefined,
          Object {
            "fontFamily": "Feather",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#BCBBC1",
        "height": 0.5,
      }
    }
  />
</View>
`;

exports[`ListItem component renders correctly with icon component 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flexDirection": "row",
          "padding": 10,
        },
        undefined,
      ]
    }
  >
    <Text>
      Icon
    </Text>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#BCBBC1",
        "height": 0.5,
      }
    }
  />
</View>
`;

exports[`ListItem component renders correctly with right component 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flexDirection": "row",
          "padding": 10,
        },
        undefined,
      ]
    }
  >
    <Text>
      Right component
    </Text>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#BCBBC1",
        "height": 0.5,
      }
    }
  />
</View>
`;

exports[`ListItem component renders correctly with title and subtitle 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flexDirection": "row",
          "padding": 10,
        },
        undefined,
      ]
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
          "opacity": 1,
        }
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Array [
              Object {
                "fontSize": 17,
              },
            ],
            null,
          ]
        }
      >
        title
      </Text>
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Array [
              Object {
                "color": "#212121",
                "fontSize": 15,
              },
            ],
            null,
          ]
        }
      >
        subtitle
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#BCBBC1",
        "height": 0.5,
      }
    }
  />
</View>
`;
